# 20250628-tbm

./: .env.example  .envrc.example  .gitignore  README.md
.github/workflows/: ecs_application_deploy.yml
application/: .cursorrules  Cargo.toml  Makefile  README.md  docker-compose.yml  schema.sql  task_definition.prod.json
application/docs/: Step1.API.md  Step1.ERD.md  Step1.PRD.md
application/migrations/: 20250709_000001_create_users_table.sql
application/src/: lib.rs  main.rs
application/src/config/: mod.rs
application/src/dto/: mod.rs
application/src/dto/request/: auth_request.rs  mod.rs
application/src/dto/response/: auth_response.rs  health_response.rs  mod.rs
application/src/entities/: mod.rs  user.rs
application/src/error/: mod.rs
application/src/handlers/: auth_handler.rs  health_handler.rs  mod.rs
application/src/middleware/: auth.rs  mod.rs
application/src/repositories/: mod.rs  user_repository.rs
application/src/services/: health_service.rs  mod.rs  user_service.rs
application/src/utils/: jwt.rs  mod.rs  validation.rs
application/tests/: auth_test.rs  health_test.rs
infrastructure/ansible/: README.md
infrastructure/packer/: README.md
infrastructure/terraform/init/: README.md  main.tf  terraform.tfstate  terraform.tfstate.backup
infrastructure/terraform/main/prod/projects/application/: 00_ecr.tf  02_task_definition.tf  conf.tf  data.tf  main.tf
infrastructure/terraform/main/prod/resources/service_ecs/: conf.tf  main.tf
infrastructure/terraform/main/prod/resources/service_lb/: conf.tf  main.tf
