[package]
name = "tbm-application"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.32", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = "0.16"
utoipa = "4.0"
utoipa-swagger-ui = "4.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
bcrypt = "0.15"
regex = "1.0"
jsonwebtoken = "9.0"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
axum-test = "13.0"
